traces/bug_27.txt
/home/runner/work/42sh-infer/42sh-infer/src/alias/parse.c:31: error: DEAD_STORE
  The value written to &i (type unsigned long) is never used.
Showing all 1 steps of the trace


/home/runner/work/42sh-infer/42sh-infer/src/alias/parse.c:31:14: Write of unused value
29.           if (path[i] == 0)
30.               return false;
31.       if (path[++i] == 0)
                   ^
32.           return true;
33.       return false;
